--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -10,7 +10,7 @@
   --input-color: #555;
   --text-color: #222;
   --accent-color: purple;
-
+  --error-color: red;
 
   /* ==========font and typography========== */
   --body-font: sans-serif;
@@ -65,7 +65,6 @@ p {
 
 .input__container {
   display: flex;
-  margin-bottom: 1rem;
 }
 
 .input {
@@ -77,30 +76,56 @@ p {
   text-transform: uppercase;
 }
 
+.error__state__color{
+  color: var(--error-color);
+}
+
+.error__msg {
+  font-style: italic;
+}
+
 .input input {
-  margin-top: 0.3rem;
+  margin: 0.3rem 0;
   width: 7rem;
   height: 3rem;
   display: block;
   border-radius: .3rem;
-  border: 1px solid var(--input-color);
   color: var(--text-color);
   font-size: var(--medium-text-size);
   font-weight: var(--font-bold);
   padding-left: 1rem;
 }
 
-/* .divider__container {
-  display: flex;
-} */
+.input__correct__state {
+  border: 1px solid var(--input-color);
+}
+
+.input__error__state {
+  border: 1px solid var(--error-color);
+}
+
+.divider__container {
+  display: grid;
+  grid-template-columns: 82% 18%;
+  gap: 5px;
+}
+
+.horizontal__line {
+  width: 100%;
+  height: 1px;
+  background-color: #555;
+  margin-top: 22px;
+}
 
 .svg__image {
-  display: inline-flex;
-  flex: left;
+  background-color: var(--accent-color);
+  padding: 2px;
+  border-radius: 50%;
+  padding: 7px;
 }
 
 .result__container {
-  margin-top: 3rem;
+  margin-top: 1rem;
   font-size: var(--big-text-size);
   font-weight: var(--font-bold);
 }
